# theseus

.github/workflows/: cli-build.yml  gui-build.yml  tauri-build.yml
theseus/: Cargo.toml
theseus/src/event/: emit.rs  mod.rs
theseus_gui/: package.json  pnpm-lock.yaml
theseus_gui/src/: App.vue  main.js
theseus_gui/src-tauri/: Cargo.toml  tauri.conf.json
theseus_gui/src-tauri/src/: main.rs
theseus_gui/src-tauri/src/api/: auth.rs
theseus_gui/src/components/: GridDisplay.vue
theseus_gui/src/components/ui/: ExportModal.vue  Instance.vue  InstanceCreationModal.vue  JavaSelector.vue  ModInstallModal.vue
theseus_gui/src/components/ui/tutorial/: StickyTitleBar.vue
theseus_gui/src/helpers/: auth.js  import.js  jre.js  logs.js  metadata.js  mr_auth.js  pack.js  process.js  profile.js  settings.js  state.js  tags.js  utils.js
theseus_gui/src/mixins/: macCssFix.js
theseus_gui/src/pages/: Browse.vue  Settings.vue
theseus_gui/src/pages/instance/: Index.vue  Mods.vue  Options.vue
theseus_gui/src/pages/project/: Index.vue
theseus_playground/: Cargo.toml
