[package]
name = "theseus"
version = "0.7.2"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theseus_macros = { path = "../theseus_macros" }

bytes = "1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_ini = "0.2.0"
toml = "0.8.13"
sha1_smol = { version = "1.0.0", features = ["std"] }
sha2 = "0.10.8"
url = "2.5.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
zip = "2.1.3"
async_zip = { version = "0.0.17", features = ["full"] }
flate2 = "1.0.30"
tempfile = "3.10.1"
urlencoding = "2.1.3"


chrono = { version = "0.4.38", features = ["serde"] }
daedalus = { version = "0.1.27" }
dirs = "5.0.1"

regex = "1.10.5"
sys-info = "0.9.1"
sysinfo = "0.30.12"
thiserror = "1.0.61"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.3"

paste = { version = "1.0.15" }

tauri = { version = "2.0.0-beta.22", optional = true }
indicatif = { version = "0.17.3", optional = true }

async-tungstenite = { version = "0.26.1", features = ["tokio-runtime", "tokio-native-tls"] }
futures = "0.3"
reqwest = { version = "0.12.3", features = ["json", "stream", "deflate", "gzip", "brotli"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
async-recursion = "1.1.1"

notify = { version = "6.1.1", default-features = false }
notify-debouncer-mini = { version = "0.4.1", default-features = false }

lazy_static = "1.4.0"
dunce = "1.0.3"

whoami = "1.4.0"

discord-rich-presence = "0.2.3"

p256 = { version = "0.13.2", features = ["ecdsa"] }
rand = "0.8"
byteorder = "1.5.0"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[features]
tauri = ["dep:tauri"]
cli = ["dep:indicatif"]